<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.near_miss.learningapp.app.EditGalaxy"
    android:orientation="vertical"
    android:background="@drawable/galaxyinfoscreen">

    <TextView android:id="@+id/edit_title"
        android:text="@string/edit_galaxy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="22dp"
        android:layout_marginBottom="16dp"/>
    <EditText android:id="@+id/edit_colony"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/edit_title"
        android:layout_alignBaseline="@id/submit_colony"
        android:hint="@string/hint_colony"
        android:textColorHint="#FFFFFF"
        />
    <Button android:id="@+id/submit_colony"
        android:layout_marginLeft="8dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/edit_title"
        android:layout_toRightOf="@id/edit_colony"
        android:text="@string/ok_button"
        android:textColor="#FFFFFF"/>
    <EditText android:id="@+id/edit_pop"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/edit_colony"
        android:hint="@string/hint_pop"
        android:layout_alignBaseline="@id/submit_pop"
        android:textColorHint="#FFFFFF"/>
    <Button android:id="@+id/submit_pop"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/submit_colony"
        android:layout_alignLeft="@id/submit_colony"
        android:text="@string/ok_button"
        android:textColor="#FFFFFF"/>
    <EditText android:id="@+id/edit_fleet"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/edit_pop"
        android:hint="@string/hint_fleet"
        android:layout_alignBaseline="@id/submit_fleet"
        android:textColorHint="#FFFFFF"/>
    <Button android:id="@+id/submit_fleet"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/submit_pop"
        android:layout_alignLeft="@id/submit_pop"
        android:text="@string/ok_button"
        android:textColor="#FFFFFF"/>
    <EditText android:id="@+id/edit_ships"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/edit_fleet"
        android:hint="@string/hint_ships"
        android:layout_alignBaseline="@id/submit_ships"
        android:textColorHint="#FFFFFF"/>
    <Button android:id="@+id/submit_ships"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/submit_fleet"
        android:layout_alignLeft="@id/submit_fleet"
        android:text="@string/ok_button"
        android:textColor="#FFFFFF"/>
</RelativeLayout>
